--- a/src/app.postcss
+++ b/src/app.postcss
@@ -25,10 +25,10 @@
 		@apply mb-[10px] md:mb-[16px];
 
 		/* smallest Screens */
-		@apply text-2xl;
+		@apply text-3xl md:text-2xl;
 
 		/* sm and larger */
-		@apply sm:text-4xl;
+		@apply sm:text-5xl;
 	}
 
 	h2,
